--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ server/app/__pycache__
 server/data/db/*
 .idea/*
 server/.idea/*
+playgnd/*
 playgnd/.idea/*
 server/stanford-nlp
 ChineseReadingMachine_v3.6.2
