--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 *.DS_Store
 *.pyc
 server/app/__pycache__
-server/data/db/*
-.idea/*
-server/.idea/*
-playgnd/*
-playgnd/.idea/*
+server/data/db/
+.idea/
+server/.idea/
+playgnd/
+playgnd/.idea/
 server/stanford-nlp
 ChineseReadingMachine_v3.6.2
