--- a/app_rust/Cargo.toml
+++ b/app_rust/Cargo.toml
@@ -8,3 +8,11 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.5"
+mongodb = "1.0.0"
+uuid = { version = "0.8", features = ["v4"] }
+
+# Docs: https://api.rocket.rs/v0.4/rocket_contrib/
+[dependencies.rocket_contrib]
+version = "0.4.5"
+default-features = false
+features = ["handlebars_templates", "tera_templates"]
