--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "app_rust"
+name = "duguo"
 version = "0.1.0"
 authors = ["epan"]
 edition = "2018"
@@ -8,8 +8,11 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.5"
-mongodb = "1.0.0"
 uuid = { version = "0.8", features = ["v4"] }
+mongodb = { version = "1.1.1", default-features = false, features = ["sync"]}
+blake2 = "0.9.1"
+hex = "0.3.1"
+serde = "1.0.118"
 
 # Docs: https://api.rocket.rs/v0.4/rocket_contrib/
 [dependencies.rocket_contrib]
