Add JWT authentication

--- a/app/Rocket.toml
+++ b/app/Rocket.toml
@@ -7,19 +7,16 @@ port = 8000
 workers = 2
 keep_alive = 5
 log = "normal"
-limits = { forms = 32768 }
 
 [staging]
 address = "0.0.0.0"
 port = 8000
 keep_alive = 5
 log = "normal"
-limits = { forms = 32768 }
 
 [production]
 address = "0.0.0.0"
 port = 8000
 keep_alive = 5
 log = "critical"
-# secret_key = "nottheactualsecretkey"
-limits = { forms = 32768 }
+# secret_key = "notactually"
