--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -13,6 +13,8 @@ mongodb = { version = "1.1.1", default-features = false, features = ["sync"]}
 blake2 = "0.9.1"
 hex = "0.3.1"
 serde = "1.0.118"
+jsonwebtoken = "7.2.0"
+chrono = "0.4.19"
 
 # Docs: https://api.rocket.rs/v0.4/rocket_contrib/
 [dependencies.rocket_contrib]
