--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -7,9 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.4.5"
+rocket = "0.4.6"
 uuid = { version = "0.8", features = ["v4"] }
-mongodb = { version = "1.1.1", default-features = false, features = ["sync"]}
+mongodb = "1.1.1"
+tokio = { version = "0.2", features = ["full"] }
+async-trait = "0.1.42"
+futures = "0.3.8"
 blake2 = "0.9.1"
 hex = "0.3.1"
 serde = "1.0.118"
