--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,45 @@
 version: "3.8"
+volumes:
+  mongo-data:
+    driver: local
 services:
-  mongo:
+  mongodb:
     image: mongo
+    container_name: mongodb
     restart: always
+    ports:
+      - 27071:27071
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=example
+    volumes:
+      - mongo-data:/data/db
   mongo-express:
     image: mongo-express
     restart: always
     ports:
       - 8081:8081
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=root
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=example
+      - ME_CONFIG_MONGODB_SERVER=mongodb
+    depends_on:
+      - mongodb
+  tokenizer-server:
+    build: 
+      context: .
+      dockerfile: ./data_services/python.Dockerfile
+    restart: on-failure
+    ports:
+      - 8881:8881
+    depends_on:
+      - mongodb
+  rocket-web-server:
+    build: 
+      context: .
+      dockerfile: ./app/rust.Dockerfile
+    restart: on-failure
+    ports:
+      - 8000:8000
+    depends_on:
+      - tokenizer-server
