--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -17,6 +17,8 @@ hex = "0.3.1"
 serde = "1.0.118"
 jsonwebtoken = "7.2.0"
 chrono = "0.4.19"
+reqwest = { version = "0.11", features = ["blocking"] }
+scraper = "0.12.0"
 
 # Docs: https://api.rocket.rs/v0.4/rocket_contrib/
 [dependencies.rocket_contrib]
