--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -24,4 +24,4 @@ scraper = "0.12.0"
 [dependencies.rocket_contrib]
 version = "0.4.6"
 default-features = false
-features = ["handlebars_templates", "tera_templates"]
+features = ["tera_templates", "serve"]
