Add initial Redis implementation
Alright this is a big one -- moved all CEDICT lookups out of mongoDB and into Redis.

In order to do this, the following changes were made:
1) Lookups are done using the Simplified Phrase + Raw Pinyin as the unique id (uid)
- These are guaranteed to be unique during the CEDICT load into Redis
- tokenserver.py was updated to only send these two during tokenization
- - An additional library (opencc) is used to convert traditional->simplified before tokenization
- - Simplified was chosen because it was slightly less lossy than Traditional with opencc conversions
2) MongoDB was moved back to Sync (from Async)
- This is cleaner code-wise for approx same performance.
- The technical reason was Tokio versions were conflicting.
3) The URL parsing call (reqwest) was made async.
- Here, the blocking version of reqwest uses Tokio under the hood which affected the outside runtime

For reference, the file "redis_cedict_keys.txt" is provided as reference which has the uids used to
store the corresponding data (using HSETs).

There are still some bugs to clean-up, though this has improved render times.

Will need to clean-up bugs before pushing to PRD

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ version: "3.3"
 volumes:
   mongo-data:
     driver: local
+  redis-data:
+    driver: local
 services:
   mongodb:
     image: mongo
@@ -17,6 +19,14 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=example
     volumes:
       - mongo-data:/data/db
+  redis:
+    image: redis
+    container_name: redis-cache
+    restart: always
+    ports:
+      - 6379:6379
+    volumes:
+      - redis-data:/data
   tokenizer-server:
     build:
       context: ./data_services
@@ -27,6 +37,9 @@ services:
       - 8881:8881
     depends_on:
       - mongodb
+      - redis
+    # volumes:
+    #   - /home/epan/Documents/Github/DuGuo-Chinese-Reading-App/data_services:/token-server
   rocket-web-server:
     build:
       context: ./app
@@ -37,5 +50,4 @@ services:
     ports:
       - 0.0.0.0:8000:8000 # Needs to be non-localhost binding for Windows/Mac. See: https://github.com/docker/for-win/issues/197
     # volumes:
-    #   - /home/epan/Documents/Github/DuGuo-Chinese-Reading-App/app/src:/src/
-    #   - /home/epan/Documents/Github/DuGuo-Chinese-Reading-App/app/templates:/templates/
+    #   - /home/epan/Documents/Github/DuGuo-Chinese-Reading-App/app:/app
