--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -24,6 +24,7 @@ scraper = "0.12.0"
 redis = { version = "0.17.0", features = ["tokio-comp"] }
 regex = "1"
 rand = "0.8.0"
+itertools = "0.10.0"
 
 # Docs: https://api.rocket.rs/v0.4/rocket_contrib/
 [dependencies.rocket_contrib]
