Update repo structure (again) and frontend framework
- Updated frontend from Elm -> Yew
- Removed templates and moved `static` folder to outer dir
- Updated .gitignore and Dockerfile

Note code compiles, though still need to port Rocket template logic for it to run properly.

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,6 +3,7 @@ WORKDIR /app/backend
 COPY . .
 EXPOSE 8000
 
+# TODO: see if there's a way to add frontend compilation here
 # Testing
 RUN cargo build
 CMD ["cargo", "run"]
