--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 *.DS_Store
 *.pyc
 .idea/*
-app/backend/target
-app/backend/temp
-app/backend/templates/static/docs
-app/backend/Cargo.lock
-app/frontend/elm-stuff
+app/*/target
+app/*/temp
+app/*/Cargo.lock
+app/static/docs
 data_services/config.py
+data_services/__pycache__
