Get Rocket compiling again and Update file structure
Removed almost all of the API routes which will need to be
reimplemented.

Also cleaned-up sole file deletions which were previously missed.

--- a/app/backend/Cargo.toml
+++ b/app/backend/Cargo.toml
@@ -28,4 +28,4 @@ itertools = "0.10.0"
 [dependencies.rocket_contrib]
 version = "0.4.6"
 default-features = false
-features = ["tera_templates", "serve", "json"]
+features = ["serve", "json"]
