--- a/app/frontend/Cargo.toml
+++ b/app/frontend/Cargo.toml
@@ -12,3 +12,4 @@ license = "MIT"
 [dependencies]
 yew = { version = "0.18" } # Note: some weird bug with yew_stdweb - try importing stdweb on its own
 yew-router = "0.15.0"
+reqwest = "0.11.4"
