--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,7 +1,12 @@
-FROM rustlang/rust:nightly
+FROM rustlang/rust:nightly-slim
 WORKDIR /app
 COPY . .
 EXPOSE 8000
+RUN apt-get update
+RUN apt-get install -y\
+    libssl-dev\
+    pkg-config
+RUN cargo clean
 
 # Testing
 RUN cargo build
