Slim-down Python docker image
Also updates Python version, though afaik, this breaks nothing!

--- a/data_services/Dockerfile
+++ b/data_services/Dockerfile
@@ -1,6 +1,10 @@
-FROM python:3.8.7
+FROM python:3.8.12-slim-buster
 WORKDIR /token-server
 COPY . .
+RUN apt-get update
+RUN apt-get install -y\
+    gcc\
+    g++
 RUN pip install -r requirements.txt
 RUN python -m spacy download zh_core_web_sm
 RUN chmod +x startup.sh
