--- a/data_services/requirements.txt
+++ b/data_services/requirements.txt
@@ -1,7 +1,3 @@
-spacy==2.3.5
-pandas==1.2.1
-pypinyin==0.40.0
-pymongo==3.11.2
-dnspython==2.1.0
-opencc==1.1.0
-redis==3.5.3
+pandas
+pypinyin
+opencc
